src/objects/Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Who_reviewed_service__c</fullName>
        <label>Who reviewed service?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Why_best_for_us_to_deliver__c</fullName>
        <inlineHelpText>Why do we feel it is in the best interests of people with dementia for us to deliver the service?</inlineHelpText>
        <label>Why best for us to deliver?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_timescales_unrealistic__c</fullName>
        <label>Why are the timescales unrealistic?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Proposal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Proposal_ID__c</columns>
        <columns>NAME</columns>
        <columns>Locality__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>BDM__c</columns>
        <columns>Service_specification__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Proposals</label>
    </listViews>
    <listViews>
        <fullName>Proposals_without_Service_Specification</fullName>
        <columns>NAME</columns>
        <columns>Locality__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>BDM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Locality__c</field>
            <operation>contains</operation>
            <value>Northampton</value>
        </filters>
        <label>Proposals with no Service Specification</label>
    </listViews>
    <nameField>
        <label>Proposal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <recordTypes>
        <fullName>Proposal_Rec</fullName>
        <active>true</active>
        <label>Proposal_Rec</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>BDM__c</fullName>
        <label>BDM</label>
    </sharingReasons>
</CustomObject>